--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -463,7 +463,7 @@ success.create.description = Create resource was submitted successfully. The res
 success.create.updated = Updated {0}. Redirecting to details...
 success.create.updating = Updating {0}
 success.delete.description = Delete resource {0} was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
-success.update.resource = Success:
+success.update.resource = Success
 
 svg.description.add = Add an item
 svg.description.asc = Sort rows by this header in ascending order
