--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ env:
     # Required
     - OS=linux
     - COMPONENT_TAG_EXTENSION="-${TRAVIS_COMMIT}"
+
     # Component Specific
     - COMPONENT_INIT_COMMAND=${TRAVIS_BUILD_DIR}/build/install-dependencies.sh
     - COMPONENT_BUILD_COMMAND=${TRAVIS_BUILD_DIR}/build/build.sh
@@ -57,18 +58,13 @@ before_script:
 jobs:
   include:
     - stage: build
-      name: "Build the image and push it"
+      name: "Build the component and test images and push it"
       script:
         - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
         - make
-        - make component/build || travis_terminate 1
+        - make component/build
         - make component/push
         - make security/scans
-    - stage: build-test
-      name: "Build the test image and push it"
-      script:
-        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
-        - make
         - make build-test-image
         - make push-test-image
     - stage: unit-test
@@ -105,5 +101,6 @@ jobs:
         - |
           make 
           make pipeline-manifest/update PIPELINE_MANIFEST_COMPONENT_SHA256=${TRAVIS_COMMIT} PIPELINE_MANIFEST_COMPONENT_REPO=${TRAVIS_REPO_SLUG} PIPELINE_MANIFEST_BRANCH=${TRAVIS_BRANCH}
-        - echo "Waiting 60s before publishing test image..." && sleep 60
-        - make publish-test-image
+          rm -rf pipeline
+          echo "Waiting 60s before publishing test image..." && sleep 120
+          make publish-test-image
