--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -455,7 +455,7 @@ subscription.page.label.info=Use the navigation to view the resources that are d
 subscription.page.label=Resource nodes
 subscription.page.nb=of {0}
 
-subscription.page.count.info = Displays the number of subscriptions. Click the drop-down menu to view the resources by the selected subscription.
+subscription.page.count.info = Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
 subscription.page.count.nb = (1 of {0})
 
 success.create.created = Created {0}. Redirecting to details...
