--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "react-dom": "^16.14.0",
     "react-lazyload": "^2.6.9",
     "react-masonry-component": "^6.2.1",
+    "react-monaco-editor": "0.36.0",
     "react-native-base64": "0.0.2",
     "react-redux": "^5.1.2",
     "react-router-dom": "^4.2.2",
