add subscription count (#830)
* show subscription count

* change test json

* fix code smell

* fix activechannel

* change tooltip & label

* update labels

* fix label

* fix code smell

* update temptifly and add timeout

* change timeout

* update cypress test cases

* remove comments

* change failed test

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -457,6 +457,9 @@ subscription.page.label.info=Use the navigation to view the resources that are d
 subscription.page.label=Resource nodes
 subscription.page.nb=of {0}
 
+subscription.page.count.info = Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
+subscription.page.count.nb = (1 of {0})
+
 success.create.created = Created {0}. Redirecting to details...
 success.create.creating = Creating {0}
 success.create.description = Create resource was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
