Implement cluster node details pagination

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -311,6 +311,7 @@ placeholder.filterInput.tags = Add filter tags...
 
 prop.details.section.service=Service Details
 prop.details.section=Details
+prop.details.section.cluster=Select a cluster to view details
 
 props.show.local.yaml=View Resource YAML
 props.show.log=View Pod YAML and Logs
