WIP changes for embedded applications

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -494,6 +494,7 @@ table.actions.placementrules.remove = Delete placement rule
 table.actions.placementrules.search = Search placement rule
 table.actions.remove = Remove
 table.actions.remove.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
+table.actions.remove.child.application = This application is deployed by the subscription {0}. The delete action might be reverted when resources are reconciled with the resource repository.
 table.actions.subscriptions.edit = Edit subscription
 table.actions.subscriptions.remove = Delete subscription
 table.actions.subscriptions.search = Search subscription
