--- a/tests/cypress/templates/rbac_yaml/e2e-rbac-clusterrolebinding.yaml
+++ b/tests/cypress/templates/rbac_yaml/e2e-rbac-clusterrolebinding.yaml
@@ -23,36 +23,51 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: test-edit-clusterrolebinding
+  namespace: default
 subjects:
 - kind: User
   name: test-edit
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: edit
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
+metadata:
+  name: test-admin-clusterrolebinding
+  namespace: default
+subjects:
+- kind: User
+  name: test-admin
+roleRef:
+  kind: Role
+  name: admin
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
   name: test-view-clusterrolebinding
+  namespace: default
 subjects:
 - kind: User
   name: test-view
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: view
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: test-subscripion-admin-clusterrolebinding
+  name: test-subscription-admin-clusterrolebinding
 subjects:
 - kind: User
-  name: test-subscripion-admin
+  name: test-subscription-admin
 roleRef:
   kind: ClusterRole
   name: open-cluster-management:subscription-admin
