replaced checkbox with combo for merge updates

--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -35,7 +35,7 @@ git:
           token: ""
           branch: master
           path: nginx
-          gitReconcileOption: true
+          gitReconcileOption: merge
           timeWindow:
             setting: true
             type: activeinterval
