--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ext .jsx,.js .",
     "lint:fix": "eslint --ext .jsx,.js --fix .",
     "test:unit": "jest --colors",
-    "test": "jest --silent",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:update-snapshot": "jest --updateSnapshot",
     "storybook": "start-storybook -p 6006 -s ./public,./node_modules/carbon-components/css",
