--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -561,7 +561,7 @@ tooltip.creation.app.existingRuleCombo=Use placement rules already created in th
 tooltip.creation.app.github.accessid = The access token if this is a private Git repository and requires connection.
 tooltip.creation.app.github.branch = The branch of the Git repository.
 tooltip.creation.app.github.path = The location of the resources on the Git repository.
-tooltip.creation.app.github.reconcileOption = If merge option is used, new fields are added and existing fields are updated in the resource. No fields are deleted if you choose to merge.
+tooltip.creation.app.github.reconcileOption = With merge option, new fields are added and existing fields are updated in the resource. It is equivalent to kubernetes patch merge. If there are resources that are updated after the initial deployment, merge option is recommended. Replace option completely replaces the existing resource with the Git source.
 tooltip.creation.app.github.url = The URL path for the Git repository.
 tooltip.creation.app.github.user = The username if this is a private Git repository and requires connection.
 tooltip.creation.app.helmrepo.chart.name =  The specific name for the target Helm chart.
