--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -90,7 +90,7 @@ creation.app.existingRuleCombo=Existing Placement Rules
 creation.app.github.accessid = Access Token
 creation.app.github.branch = Branch
 creation.app.github.path = Path
-creation.app.github.reconcileOption = Merge updates
+creation.app.github.reconcileOption = Reconcile option
 creation.app.github.url = URL
 creation.app.github.user = Username
 creation.app.helmrepo.chart.name = Chart name
@@ -565,7 +565,7 @@ tooltip.creation.app.existingRuleCombo=Use placement rules already created in th
 tooltip.creation.app.github.accessid = The access token if this is a private Git repository and requires connection.
 tooltip.creation.app.github.branch = The branch of the Git repository.
 tooltip.creation.app.github.path = The location of the resources on the Git repository.
-tooltip.creation.app.github.reconcileOption = If selected, new fields are added and existing fields are updated in the resource. No fields are deleted if you choose to merge.
+tooltip.creation.app.github.reconcileOption = With the Merge option, new fields are added and existing fields are updated in the resource. Choose to merge if resources are updated after the initial deployment. If you choose to replace, the existing resource is replaced with the Git source.
 tooltip.creation.app.github.url = The URL path for the Git repository.
 tooltip.creation.app.github.user = The username if this is a private Git repository and requires connection.
 tooltip.creation.app.helmrepo.chart.name =  The specific name for the target Helm chart.
