--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -456,6 +456,8 @@ spec.subscr.timeWindow.timezone=Time zone
 spec.subscr.timeWindow.title=Time Window
 spec.subscr.timeWindow.type=Time Window type
 spec.subscr.timeWindow=Current window status is
+specs.k8sJob.templateName=Ansible Tower Job template name
+specs.k8sJob.secretName=Ansible Tower secret
 
 subscription.page.label.info=Use the navigation to view the resources that are deployed by the selected subscription.
 subscription.page.label=Resource nodes
