--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "react-dom": "^16.14.0",
     "react-lazyload": "^2.6.9",
     "react-masonry-component": "^6.2.1",
+    "react-monaco-editor": "0.36.0",
     "react-native-base64": "0.0.2",
     "react-redux": "^5.1.2",
     "react-router-dom": "^4.2.2",
@@ -145,7 +146,7 @@
     "svg-react-loader": "^0.4.6",
     "svg-sprite-loader": "^5.0.0",
     "svg.js": "^2.6.5",
-    "temptifly": "^0.1.12",
+    "temptifly": "^0.1.18",
     "watchr": "^4.0.1",
     "webpack-sources": "^1.1.0",
     "yaml": "^1.7.2",
