verify app resources are deployed (#886)
* verify app resources are deployed

* verify app resources are deployed

* fix success validation

Co-authored-by: Valentina Birsan <vbirsan@vbirsan@redhat.com-mac>

--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -4,7 +4,7 @@ git:
     - enable: true
       name: ui-git
       type: git
-      successNumber: 0 #should have at least 0 resources with status success in the cards status
+      successNumber: 3 #should have at least this many resources with status success in the cards status; note that we can validate this only when at least one subscription is NOT using online: true !
       new: # used when we add new subscriptions after app creation
         - url: https://dummy/insecureSkipVerifyOption
           username: ""
@@ -30,12 +30,22 @@ git:
             matchingLabel: false
       config:
         - url: https://github.com/fxiang1/app-samples.git
-          resources: ["Route", "Service", "Ingress"] #the type of resources this application must deploy
+          resources: ["route", "service", "replicaset"] #the type of resources this application must deploy
           username: ""
           token: ""
           branch: master
-          path: nginx
+          path: helloworld
           gitReconcileOption: merge
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
+        - url: https://github.com/fxiang1/app-samples.git
+          resources: ["pod", "service"] #the type of resources this application must deploy
+          username: ""
+          token: ""
+          branch: master
+          path: mortgagepod
           timeWindow:
             setting: true
             type: activeinterval
@@ -43,19 +53,10 @@ git:
               - Thursday
               - Friday
             hours:
-              - start: "09:00"
-                end: "12:00"
-              - start: "15:00"
-                end: "18:00"
-          deployment:
-            local: false
-            online: false
-            matchingLabel: true
-        - url: https://github.com/fxiang1/app-samples.git
-          username: ""
-          token: ""
-          branch: master
-          path: helloworld
+              - start: "09:10"
+                end: "09:11"
+              - start: "15:10"
+                end: "15:11"
           deployment:
             local: true
             online: false
@@ -65,7 +66,6 @@ objectstore:
     - enable: true
       name: ui-obj
       type: objectstore
-      successNumber: 0
       new: # used when we add new subscriptions after app creation
         - url: http://ec2-dummy/dev1
           accessKey: dummy1
@@ -135,7 +135,7 @@ helm:
     - enable: true
       name: ui-helm
       type: helm
-      successNumber: 0
+      successNumber: 4 #should have at least 4 resources with status success in the cards status; note that we can validate this only when at least one subscription is NOT using online: true !
       new: # used when we add new subscriptions after app creation
         - url: https://dummy/helminsecureSkipVerifyOption
           username: ""
@@ -156,29 +156,29 @@ helm:
             online: false
             matchingLabel: false
       config:
-        - url: https://kubernetes-charts.storage.googleapis.com
-          resources: ["Service"] #the type of resources this application must deploy
+        - url: https://charts.bitnami.com/bitnami
           username: ""
           password: ""
-          chartName: aerospike
-          packageVersion: 0.3.3
+          chartName: redis
+          packageVersion: 12.2.4
           deployment:
             local: false
             online: false
             matchingLabel: true
-        - url: https://kubernetes-charts.storage.googleapis.com
+        - url: https://charts.bitnami.com/bitnami
+          resources: ["service", "configmap", "secret", "deployment"] #the type of resources this application must deploy
           username: ""
           password: ""
-          chartName: airflow
-          packageVersion: 7.9.0
+          chartName: minio
+          packageVersion: 4.1.9
           timeWindow:
             setting: true
             type: blockinterval
             date:
               - Monday
             hours:
-              - start: "08:00"
-                end: "12:00"
+              - start: "08:10"
+                end: "08:11"
           deployment:
             local: true
             online: false
@@ -186,13 +186,13 @@ helm:
     - enable: true
       name: ui-helm2
       type: helm
-      successNumber: 0
       config:
-        - url: https://kubernetes-charts.storage.googleapis.com
+        - url: https://charts.bitnami.com/bitnami
+          resources: ["service", "secret", "configmap"] #the type of resources this application must deploy
           username: ""
           password: ""
-          chartName: aerospike
-          packageVersion: 0.3.3
+          chartName: redis
+          packageVersion: 12.2.4
           deployment:
             local: false
             online: true
