use react hooks for Secondary Header

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -545,6 +545,7 @@ table.search.labelText = Filter table
 
 tabs.dashboard.application = Application
 tabs.hcmapplication = Applications
+tabs.label=Applications Label
 tabs.new.title = Search - {0} (Unsaved)
 tabs.queryapplications = Applications
 
