--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -61,18 +61,23 @@ git:
             local: true
             online: false
             matchingLabel: false
-                  config:
+    - enable: true
+      name: ui-git-ansible
+      type: git
+      config:
         - url: https://github.com/fxiang1/app-samples.git
-          resources: ["configmap"] #the type of resources this application must deploy
+          resources: ["configmap", "ansiblejob"] #the type of resources this application must deploy
           username: ""
           token: ""
           branch: master
           path: ansible
           gitReconcileOption: merge
-          ansibleSecretName: test-secret-name
+          ansibleSecretName: ui-git-ansible-secret
+          ansibleHost: ""
+          ansibleToken: ""
           deployment:
-            local: true
-            online: false
+            local: false
+            online: true
             matchingLabel: false
 objectstore:
   data:
