add note in topology legend

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -615,6 +615,7 @@ topology.filter.category.status.warning = Warning
 topology.legend.body.resource.title = Resource icon legend
 topology.legend.body.status.logs = For more details and logs, click on the nodes to open the properties view.
 topology.legend.body.status.title = Status icon legend
+topology.legend.body.status.note = Note: Resources that you do not have permission to view display a status of "Not deployed".
 topology.legend.body.text.failure = Some resources in this group are in error state.
 topology.legend.body.text.pending = None of the resources in this group deployed.
 topology.legend.body.text.success = All resources in this group deployed successfully.
