fix 2.1 box value

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -1393,7 +1393,8 @@ creation.missing.clusterSelector.label = Cluster matching labels section missing
 creation.missing.clusterSelector.value = Cluster matching labels section missing label value.
 creation.missing.clusterSelector.label.field= Label must be set
 creation.missing.clusterSelector.value.field= Value must be set
-clusterSelector.label.field=Label name
+clusterSelector.label.placeholder.field=Label name
+clusterSelector.value.placeholder.field=Label Value
 clusterSelector.label.field.ui=Label
 clusterSelector.value.field=Value
 clusterSelector.value.field.ui=Value
