Improve legendview message

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -619,7 +619,7 @@ topology.legend.body.status.title = Status icon legend
 topology.legend.body.status.note = Note: Resources that you do not have permission to view display a status of "Not deployed".
 topology.legend.body.text.failure = Some resources in this group are in error state.
 topology.legend.body.text.pending = None of the resources in this group deployed.
-topology.legend.body.text.success = All resources in this group deployed successfully.
+topology.legend.body.text.success = All resources in this group have deployed on the target clusters, although their status might not be successful.
 topology.legend.body.text.warning = Some resources in this group did not deploy. Other resources deployed successfully.
 topology.legend.close = Close topology legend view
 topology.legend.header.text = The topology provides a visual representation of all the applications and resources within a project, their build status, and the components and services associated with them.
