--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -64,6 +64,7 @@ git:
     - enable: true
       name: ui-git-ansible
       type: git
+      successNumber: 2
       config:
         - url: https://github.com/fxiang1/app-samples.git
           resources: ["configmap", "ansiblejob"] #the type of resources this application must deploy
@@ -77,8 +78,8 @@ git:
           ansibleToken: ""
           deployment:
             local: false
-            online: false
-            matchingLabel: true
+            online: true
+            matchingLabel: false
 objectstore:
   data:
     - enable: true
