enable object store test validation

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -85,6 +85,7 @@ objectstore:
     - enable: true
       name: ui-obj
       type: objectstore
+      successNumber: 1 #should have at least this many resources with status success in the cards status; note that we can validate this only when at least one subscription is NOT using online: true !
       new: # used when we add new subscriptions after app creation
         - url: http://ec2-dummy/dev1
           accessKey: dummy1
@@ -127,6 +128,7 @@ objectstore:
             online: false
             matchingLabel: true
         - url: http://ec2-dummy/dev2
+          resources: ["configmap", "deployment", "replicaset"] #the type of resources this application must deploy
           accessKey: dummy11
           secretKey: dummy22
           timeWindow:
