Rebase and update custom components

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -135,6 +135,8 @@ creation.app.settings.timeWindow.config.days.descr = Select at least one day to 
 creation.app.settings.timeWindow.config.days.title = Days of the week
 creation.app.settings.timeWindow.config.time.add = Add another time range
 creation.app.settings.timeWindow.config.timezone.title = Time zone
+creation.app.settings.timeWindow.config.timezone.startTime = Start Time
+creation.app.settings.timeWindow.config.timezone.endTime = End Time
 creation.app.settings.timeWindow.defaultMode = Always active
 creation.app.settings.timeWindow.tooltip=Define a time window if you want to activate or block resources deployment within a certain time interval. 
 creation.app.yaml = Application YAML
