Display related Argo apps

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -407,6 +407,7 @@ resource.pod = Pod
 resource.pods.deployed = Deployed these pods
 resource.pods=Pods
 resource.reason = Reason
+resource.related.apps = Related applications
 resource.release = Release
 resource.replicas = Replicas
 resource.resource.status = Resource status
