Add test script

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ tests/jest/config/platform-properties.json
 tests/cypress/tests/test.js
 tests/cypress/test-artifacts/*
 tests/cypress/config/import-kubeconfig/*
+tests/cypress/config/certificates/*
 build-harness-extensions/
 build-harness/
 .build-harness-bootstrap
