--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ services:
 
 branches:
   only:
-    - master
+    - main
     - /^release-[0-9]+\..*$/
 
 addons:
@@ -98,7 +98,7 @@ jobs:
         - make component/test/e2e
     - stage: release-ff
       name: "Push commits to current release branch"
-      if: type = push AND branch =~ /^master$/
+      if: type = push AND branch =~ /^main$/
       script:
         - make
         - make release-ff
