--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -163,6 +163,7 @@ helm:
           username: ""
           password: ""
           chartName: redis
+          packageAlias: alias-for-redis
           packageVersion: 12.2.4
           deployment:
             local: false
@@ -173,6 +174,7 @@ helm:
           username: ""
           password: ""
           chartName: minio
+          packageAlias: my-minio-alias
           packageVersion: 4.1.9
           timeWindow:
             setting: true
