--- a/Dockerfile.prow
+++ b/Dockerfile.prow
@@ -1,22 +1,17 @@
-FROM registry.ci.openshift.org/open-cluster-management/builder:nodejs14-linux-amd64
+FROM registry.ci.openshift.org/open-cluster-management/builder:nodejs14-linux-amd64 as builder
 
 # Root needed for yum update, gets reset to 1001 below.
 USER root
+WORKDIR /opt/app-root/src/application-ui
+COPY . /opt/app-root/src/application-ui/
+RUN yum install git -y
 RUN yum -y update
-
-FROM registry.access.redhat.com/ubi8/nodejs-14:1
-USER root
-RUN yum -y remove nodejs-nodemon
+RUN cd /opt/app-root/src/application-ui/ && npm ci && npm run build:production
+RUN ls /opt/app-root/src/application-ui
 
 ENV BABEL_DISABLE_CACHE=1 \
     NODE_ENV=production \
     USER_UID=1001
-
-RUN mkdir -p /opt/app-root/src/application-ui
-RUN mkdir -p /opt/app-root/licenses
-WORKDIR /opt/app-root/src/application-ui
-
-COPY . /opt/app-root/src/application-ui
 
 EXPOSE 3000
 
