--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,6 +53,7 @@ channel.type.git = Git
 channel.type.helmrepo = Helm
 channel.type.label.gitBranch = Branch
 channel.type.label.gitPath = Path
+channel.type.label.targetRevision = Revision
 channel.type.label.noData = Not selected
 channel.type.label.package = Chart name
 channel.type.label.packageFilterVersion = Package version
@@ -174,6 +175,7 @@ dashboard.card.overview.cards.timeWindow.edit.label = Edit time window
 dashboard.card.overview.cards.timeWindow.label = Time window
 dashboard.card.overview.cards.timeWindow.set.label = Set time window
 dashboard.card.overview.cards.title = Details
+dashboard.card.overview.cards.argo.app = Argo CD
 
 description.ansible.job.status.debug= Use View Resource YAML link below to view the Ansible Job details. Look for the message section and follow the debug instructions available there.
 description.ansible.job.status.empty.err= Ansible task was not executed. Check the Subscription YAML for status errors.
