--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -163,7 +163,7 @@ helm:
           username: ""
           password: ""
           chartName: redis
-          packageAlias: alias-for-redis
+          packageAlias: redis #alias-for-redis
           packageVersion: 12.2.4
           deployment:
             local: false
@@ -174,7 +174,7 @@ helm:
           username: ""
           password: ""
           chartName: minio
-          packageAlias: my-minio-alias
+          packageAlias: minio #my-minio-alias
           packageVersion: 4.1.9
           timeWindow:
             setting: true
