Carbon cleanup + new header (#1025)
* Remove unused Carbon code

* Remove more unused code

* Remove Carbon icon usage

* Style and test cleanup

* Remove bx references

* Remove Carbon packages and webpack config

* Update ui-components for new header

* Update snapshots

* fix styling in UI

Co-authored-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest --silent",
     "test:watch": "jest --watch",
     "test:update-snapshot": "jest --updateSnapshot",
-    "storybook": "start-storybook -p 6006 -s ./public,./node_modules/carbon-components/css",
+    "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook",
     "test:slack": "node tests/cypress/scripts/slack-reporter.js"
   },
@@ -49,7 +49,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@open-cluster-management/security-middleware": "^1.0.2",
-    "@open-cluster-management/ui-components": "^0.1.242",
+    "@open-cluster-management/ui-components": "^0.1.249",
     "@patternfly/patternfly": "^4.90.5",
     "@patternfly/react-core": "^4.101.3",
     "@patternfly/react-icons": "^4.9.2",
@@ -67,11 +67,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
-    "carbon-addons-cloud": "^2.3.0",
-    "carbon-addons-cloud-react": "^1.12.4",
-    "carbon-components": "^9.91.5",
-    "carbon-components-react": "^6.63.0",
-    "carbon-icons": "^7.0.7",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.5",
     "cross-env": "^5.1.4",
