--- a/package.json
+++ b/package.json
@@ -185,12 +185,12 @@
     "eslint-plugin-react": "^7.21.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.x",
-    "filemanager-webpack-plugin": "^1.0.26",
+    "filemanager-webpack-plugin": "^4.0.0",
     "flatpickr": "^4.6.6",
     "geckodriver": "^1.20.0",
     "git-revision-webpack-plugin": "^2.5.1",
     "husky": "^1.3.1",
-    "jest": "23.6.0",
+    "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
     "jest-handlebars": "^1.0.1",
     "jest-tap-reporter": "^1.9.0",
